--- a/index.html
+++ b/index.html
@@ -31,55 +31,55 @@
         </div>
     </nav>
         <section class="planet" id="sun">
-            <img src="sun.png" alt="sun" >
+            <img src="asset/sun.png" alt="sun" >
             <p class="info">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et illo vel porro iste possimus odit provident ea labore nostrum praesentium nihil eius aut nemo fuga a deleniti, sed, exercitationem pariatur reprehenderit minus! Aspernatur perferendis beatae nisi nam asperiores? Sit, ea. Eligendi repudiandae cum aliquam, sed voluptatem necessitatibus eum nobis exercitationem in repellat, dolore minima delectus quo dolor ipsam similique natus corrupti ipsum quidem sapiente perspiciatis inventore praesentium! A voluptates voluptate omnis nihil placeat commodi temporibus veniam autem quo? Sint optio porro esse voluptatem debitis, provident aut quo unde dolores nulla veniam perferendis est asperiores ratione, laborum praesentium, officiis minima hic.
             </p>
         </section>       
       <section class="planet" id="mercury">
-            <img src="mercury.png" alt="mercury" >
+            <img src="asset/mercury.png" alt="mercury" >
                 <p class="info">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
                 </p>
         </section>
         <section class="planet" id="venus">
-            <img src="venus.png" alt="venus" >
+            <img src="asset/venus.png" alt="venus" >
                 <p class="info">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
                 </p>
         </section>
         <section class="planet" id="earth">
-            <img src="earth.png" alt="earth" >
+            <img src="asset/earth.png" alt="earth" >
                 <p class="info">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
                 </p>
         </section>
         <section class="planet" id="mars">
-            <img src="mars.png" alt="mars" >
+            <img src="asset/mars.png" alt="mars" >
                 <p class="info">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
                 </p>
         </section>
         <section class="planet" id="jupiter">
-            <img src="jupiter.png" alt="jupiter" >
+            <img src="asset/jupiter.png" alt="jupiter" >
                 <p class="info">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
                 </p>
         </section>
         <section class="planet" id="saturn">
-            <img src="saturn.png" alt="saturn" >
+            <img src="asset/saturn.png" alt="saturn" >
                 <p class="info">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
                 </p>
         </section>
         <section class="planet" id="uranus">
-            <img src="uranus.png" alt="uranus" >
+            <img src="asset/uranus.png" alt="uranus" >
                 <p class="info">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
                 </p>
         </section>
         <section class="planet" id="neptune">
-            <img src="neptune.png" alt="neptune" >
+            <img src="asset/neptune.png" alt="neptune" >
                 <p class="info">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
                 </p>
