--- a/index.html
+++ b/index.html
@@ -33,55 +33,95 @@
         <section class="planet" id="sun">
             <img src="asset/sun.png" alt="sun" >
             <p class="info">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et illo vel porro iste possimus odit provident ea labore nostrum praesentium nihil eius aut nemo fuga a deleniti, sed, exercitationem pariatur reprehenderit minus! Aspernatur perferendis beatae nisi nam asperiores? Sit, ea. Eligendi repudiandae cum aliquam, sed voluptatem necessitatibus eum nobis exercitationem in repellat, dolore minima delectus quo dolor ipsam similique natus corrupti ipsum quidem sapiente perspiciatis inventore praesentium! A voluptates voluptate omnis nihil placeat commodi temporibus veniam autem quo? Sint optio porro esse voluptatem debitis, provident aut quo unde dolores nulla veniam perferendis est asperiores ratione, laborum praesentium, officiis minima hic.
+                The Sun goes through ups and downs in activity like solar flares. It gets more active with more sunspots and then less
+                active over a period of 11 years. This is called the solar cycle.
+                The Sun has been getting slowly brighter since it was born. A couple of billions of years ago, the Sun was a little
+                dimmer than it is now.
+                The Sun contains almost ALL of the material in our solar system. 99% of it. All the planets, asteroids and comets add up
+                to less than 1% of the total.
+                The Sun is so far away that it takes light about 8 minutes and 20 seconds for it to get to us &#45 and light is the fastest
+                thing in the universe.&#45&#45Source from NASA
             </p>
         </section>       
       <section class="planet" id="mercury">
             <img src="asset/mercury.png" alt="mercury" >
                 <p class="info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
+                    Mercury&#39s surface temperatures are both extremely hot and cold. Because the planet is so close to the Sun, day
+                    temperatures can reach highs of 800°F (430°C). Without an atmosphere to retain that heat at night, temperatures can dip
+                    as low as -290°F (&#45 180°C).                    
+                    Despite its proximity to the Sun, Mercury is not the hottest planet in our solar system &#45 that title belongs to nearby
+                    Venus, thanks to its dense atmosphere. But Mercury is the fastest planet, zipping around the Sun every 88 Earth days.
                 </p>
         </section>
         <section class="planet" id="venus">
             <img src="asset/venus.png" alt="venus" >
                 <p class="info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
+                Venus is the second planet from the Sun, and Earth&#39s closest planetary neighbor. Venus is the third brightest object in
+                the sky after the Sun and Moon. Venus spins slowly in the opposite direction from most planets.                
+                Venus is similar in structure and size to Earth, and is sometimes called Earth&#39s evil twin. Its thick atmosphere traps
+                heat in a runaway greenhouse effect, making it the hottest planet in our solar system with surface temperatures hot
+                enough to melt lead. Below the dense, persistent clouds, the surface has volcanoes and deformed mountains.
                 </p>
         </section>
         <section class="planet" id="earth">
             <img src="asset/earth.png" alt="earth" >
                 <p class="info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
+                  Earth has a very hospitable temperature and mix of chemicals that have made life abundant here. Most notably, Earth is
+                unique in that most of our planet is covered in liquid water, since the temperature allows liquid water to exist for
+                extended periods of time. Earth&#39s vast oceans provided a convenient place for life to begin about 3.8 billion years ago.
                 </p>
         </section>
         <section class="planet" id="mars">
             <img src="asset/mars.png" alt="mars" >
                 <p class="info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
+                    Mars is one of the most explored bodies in our solar system, and it&#39s the only planet where we&#39ve sent rovers to roam
+                    the alien landscape. NASA missions have found lots of evidence that Mars was much wetter and warmer, with a thicker
+                    atmosphere, billions of years ago.                    
+                    Mars was named by the Romans for their god of war because its reddish color was reminiscent of blood. The Egyptians
+                    called it "Her Desher," meaning "the red one."                    
+                    Even today, it is frequently called the "Red Planet" because iron minerals in the Martian dirt oxidize, or rust, causing
+                    the surface to look red.
                 </p>
         </section>
         <section class="planet" id="jupiter">
             <img src="asset/jupiter.png" alt="jupiter" >
                 <p class="info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
+                    Jupiter&#39s signature stripes and swirls are actually cold, windy clouds of ammonia and water, floating in an atmosphere
+                    of hydrogen and helium. The dark orange stripes are called belts, while the lighter bands are called zones, and they
+                    flow east and west in opposite directions. Jupiter&#39s iconic Great Red Spot is a giant storm bigger than Earth that has
+                    raged for hundreds of years.                    
+                    The king of planets was named for Jupiter, king of the gods in Roman mythology. Most of its moons are also named for
+                    mythological characters, figures associated with Jupiter or his Greek counterpart, Zeus.
                 </p>
         </section>
         <section class="planet" id="saturn">
             <img src="asset/saturn.png" alt="saturn" >
                 <p class="info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
+                    Like fellow gas giant Jupiter, Saturn is a massive ball made mostly of hydrogen and helium. Saturn is not the only
+                    planet to have rings, but none are as spectacular or as complex as Saturn&#39s. Saturn also has dozens of moons.                   
+                    From the jets of water that spray from Saturn&#39s moon Enceladus to the methane lakes on smoggy Titan, the Saturn system
+                    is a rich source of scientific discovery and still holds many mysteries.
                 </p>
         </section>
         <section class="planet" id="uranus">
             <img src="asset/uranus.png" alt="uranus" >
                 <p class="info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
+                Uranus is a very cold and windy world. The ice giant is surrounded by 13 faint rings and 28 small moons. Uranus rotates
+                at a nearly 90-degree angle from the plane of its orbit. This unique tilt makes Uranus appear to spin sideways, orbiting
+                the Sun like a rolling ball.
+                Uranus was the first planet found with the aid of a telescope. It was discovered in 1781 by astronomer William Herschel,
+                although he originally thought it was either a comet or a star. It was two years later that the object was universally
+                accepted as a new planet, in part because of observations by astronomer Johann Elert Bode.
                 </p>
         </section>
         <section class="planet" id="neptune">
             <img src="asset/neptune.png" alt="neptune" >
                 <p class="info">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo ab nemo incidunt cupiditate totam dolore facilis quisquam, libero ipsam neque dolorem architecto. Aut reprehenderit perspiciatis ipsam qui alias rem saepe autem, corporis provident, minus, maxime asperiores suscipit quasi eius dolor tenetur aspernatur quis cumque dicta expedita in iste ad quisquam! Veniam nesciunt magni vero laborum aperiam itaque labore in sint qui impedit! Doloremque ad esse quibusdam deserunt consequatur quae? Dolor, consequuntur. Adipisci architecto maxime voluptates. Libero placeat velit impedit hic aspernatur adipisci fugiat minus officiis dolorum blanditiis magni repellendus molestiae accusantium ipsum deleniti autem consequatur at tempora, assumenda et recusandae.
+                    Dark, cold, and whipped by supersonic winds, ice giant Neptune is more than 30 times as far from the Sun as Earth.
+                    Neptune is the only planet in our solar system not visible to the naked eye. In 2011 Neptune completed its first
+                    165-year orbit since its discovery in 1846.                    
+                    Neptune is so far from the Sun that high noon on the big blue planet would seem like dim twilight to us. The warm light
+                    we see here on our home planet is roughly 900 times as bright as sunlight on Neptune.
                 </p>
         </section> 
     </div>
